Routing and nav

--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -71,6 +71,8 @@
     ] -%}
 
     {% set protected_nav = [
+      ('/about', 'about', 'About'),
+      ('/products', 'products', 'Products'),
       ('/user/orders', 'user_orders', 'Orders'),
     ] -%}
 
