--- a/web_app/templates/user_profile.html
+++ b/web_app/templates/user_profile.html
@@ -51,7 +51,7 @@
 
         <div class="card card-body mt-3">
             <p class="mt-0 mb-0">
-                <a href="/user/logout">Logout</a>
+                <a href="/logout">Logout</a>
             </p>
         </div>
 
