--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- Bootstrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
     <!-- Google Analytics  -->
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ config.GA_TRACKER_ID }}"></script>
@@ -78,10 +78,10 @@
 
     {% set active_page = active_page|default('home') -%}
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg {{ config.NAV_COLOR_CLASS }}">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-                <i class="bi-calendar3" style="font-size: 1.7rem; color: white;"></i>
+                <i class="{{ config.NAV_ICON_CLASS }}" style="font-size: 1.7rem; color: white;"></i>
                 &nbsp;
                 {{ config.APP_TITLE }}
             </a>
