Flexible auth options, verify login with google, fix user profile names

--- a/web_app/templates/user_profile.html
+++ b/web_app/templates/user_profile.html
@@ -20,12 +20,12 @@
 
                 <div class="mb-3">
                     <label for="first-name-input" class="form-label">First Name:</label>
-                    <input disabled type="text" name="first_name" id="first-name-input" class="form-control" value="{{ user.first_name }}" >
+                    <input disabled type="text" name="first_name" id="first-name-input" class="form-control" value="{{ user.given_name }}" >
                 </div>
 
                 <div class="mb-3">
                     <label for="last-name-input" class="form-label">Last Name:</label>
-                    <input disabled type="text" name="last_name" id="last-name-input" class="form-control" value="{{ user.last_name }}">
+                    <input disabled type="text" name="last_name" id="last-name-input" class="form-control" value="{{ user.family_name }}">
                 </div>
 
                 <!--div class="d-grid gap-2">
