--- a/web_app/templates/signup.html
+++ b/web_app/templates/signup.html
@@ -1,15 +1,51 @@
 {% extends "bootstrap_5_layout.html" %}
 {% set active_page = "signup" %}
 
+{% block head %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='strike.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='google-login.css') }}">
+{% endblock %}
+
+
 {% block content %}
 
     <div class="container" style="max-width: 350px;">
-
         <h1>Signup</h1>
+
+        <p class="lead mb-3">For new users.</p>
+
+        <div class="d-grid gap-2">
+            <!--a href="/auth/google/login" class="btn btn-outline-primary btn-block">
+                <i class="bi bi-google"></i>
+                Signup with Google
+            </a-->
+
+
+
+            <a href="/auth/google/login" class="google-login-button btn btn-block position-relative">
+                <span class="google-login-button-wrapper position-absolute top-50 start-0 translate-middle-y">
+                    <img class="google-logo"
+                        src="{{ url_for('static', filename='google-button/rainbow-g-logo.svg') }}"
+                        alt="Rainbow G Logo"
+                    >
+                </span>
+
+                <span class="google-login-button-text">Signup with Google</span>
+            </a>
+
+        </div>
+
+
+
+
+        <div class="strike mt-3 mb-3">
+            <span>or</span>
+        </div>
+
+
 
         <div class="card card-body bg-light mt-3">
             <form action="/auth/email_password/redirect" method="POST">
-
                 <div class="mb-3">
                     <label for="email-input" class="form-label">Email:</label>
                     <input type="text" name="email" id="email-input" class="form-control">
@@ -22,7 +58,6 @@
                 </div>
 
                 <hr>
-
 
                 <div class="mb-3">
                     <label for="first-name-input" class="form-label">First Name:</label>
@@ -49,5 +84,10 @@
         </div>
 
     </div>
+
+
+
+
+
 
 {% endblock %}
