--- a/web_app/templates/user_orders.html
+++ b/web_app/templates/user_orders.html
@@ -17,7 +17,10 @@
                 <thead>
                     <tr>
                         <th scope="col">Order Id</th>
-                        <th scope="col" class="text-start">Order Price</th>
+                        <th scope="col">User Email</th>
+                        <th scope="col">Product Name</th>
+                        <th scope="col">Product Price</th>
+                        <th scope="col">Timestamp</th>
                     </tr>
                 </thead>
 
@@ -27,8 +30,17 @@
                         <td>
                             {{ order.id }}
                         </td>
+                        <td>
+                            {{ order.user_email }}
+                        </td>
+                        <td>
+                            {{ order.product_info.name }}
+                        </td>
+                        <td>
+                            {{ order.product_info.price }}
+                        </td>
                         <td class="text-start align-middle">
-                            {{ order.price }}
+                            {{ order.order_at.strftime('%Y-%m-%d %H:%M') }}
                         </td>
                     </tr>
                 {% endfor %}
