Create orders through the web interface

--- a/web_app/templates/user_orders.html
+++ b/web_app/templates/user_orders.html
@@ -40,7 +40,7 @@
                             {{ order.product_info.price }}
                         </td>
                         <td class="text-start align-middle">
-                            {{ order.order_at.strftime('%Y-%m-%d %H:%M') }}
+                            {{ order.order_at.strftime('%Y-%m-%d %H:%M') }} UTC
                         </td>
                     </tr>
                 {% endfor %}
