--- a/web_app/templates/products.html
+++ b/web_app/templates/products.html
@@ -18,7 +18,20 @@
                         <div class="card-body">
                             <h5 class="card-title">{{ product.name }}</h5>
                             <p class="card-text">{{ product.description }}</p>
-                            <button class="btn btn-primary">Order now!</button>
+
+                            <!--button class="btn btn-primary">Order now!</button-->
+
+                            <!-- CREATE ORDER -->
+                            <form method="POST" action="/user/orders/create" style="display: inline;">
+                                <input type="hidden" name="product_id" value="{{ product.id }}">
+                                <input type="hidden" name="product_name" value="{{ product.name }}">
+                                <input type="hidden" name="product_description" value="{{ product.description }}">
+                                <input type="hidden" name="product_price" value="{{ product.price }}">
+                                <input type="hidden" name="product_url" value="{{ product.url }}">
+                                <button type="submit" class="btn btn-outline-primary">Order now!</button>
+                             </form>
+
+
                         </div>
                     </div>
                 </div>
