Remove unused firebase auth references

--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -168,6 +168,10 @@
         console.log("DEBUG INFO:", debugInfo)
         gtag("event", "debugging_info", debugInfo) // see: https://developers.google.com/gtagjs/reference/event
 
+
+        //url
+        //gtag("event", "page_view", url)
+
     </script>
 
     {% block js_foot %}
