--- a/web_app/templates/signup.html
+++ b/web_app/templates/signup.html
@@ -37,15 +37,17 @@
 
 
 
+        <!--
+
+        EMAIL PASSWORD ACCOUNT STUFF (NOT IMPLEMENTED)
+
 
         <div class="strike mt-3 mb-3">
             <span>or</span>
         </div>
 
-
-
         <div class="card card-body bg-light mt-3">
-            <form action="/auth/email_password/redirect" method="POST">
+            <form action="/auth/email_password/signup" method="POST">
                 <div class="mb-3">
                     <label for="email-input" class="form-label">Email:</label>
                     <input type="text" name="email" id="email-input" class="form-control">
@@ -81,6 +83,11 @@
                 Already have an account? <a href="/login">Login</a>.
             </p>
         </div>
+
+
+        -->
+
+
 
     </div>
 
