--- a/web_app/templates/login.html
+++ b/web_app/templates/login.html
@@ -11,9 +11,9 @@
     <div class="container" style="max-width: 350px;">
         <h1>Login</h1>
 
-        <p class="lead mb-3">For existing users.</p>
+        <!--p class="lead mb-3">For existing users.</p-->
 
-        <div class="d-grid gap-2">
+        <div class="d-grid gap-2 mt-3">
 
 
             <a href="/auth/google/login" class="google-login-button btn btn-block position-relative">
