Login page lead

--- a/web_app/templates/login.html
+++ b/web_app/templates/login.html
@@ -12,8 +12,9 @@
         <h1>Login</h1>
 
         <!--p class="lead mb-3">For existing users.</p-->
+        <p class="lead mb-3">For new or existing users.</p>
 
-        <div class="d-grid gap-2 mt-3">
+        <div class="d-grid gap-2">
 
 
             <a href="/auth/google/login" class="google-login-button btn btn-block position-relative">
