--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -6,6 +6,8 @@
 
     <title>{{ config.APP_TITLE }}</title>
 
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- Bootstrap Icons -->
@@ -19,15 +21,7 @@
         gtag('js', new Date());
         gtag('config', '{{ config.GA_TRACKER_ID }}');
 
-        // add page views (not necessary, actually messes stuff up?)
-        // see: https://developers.google.com/analytics/devguides/collection/gtagjs/pages
-        //gtag('config', '{{ config.GA_TRACKER_ID }}', {
-        //    //'page_title' : document.title,
-        //    'page_location': location.href,
-        //    'page_path': location.pathname
-        //});
-
-        // suppress warnings in firefox (not working)
+        // suppress warnings in firefox (not working / need to figure our what domain to use)
         // see: https://stackoverflow.com/questions/62569419/how-to-set-secure-attribute-of-the-cookies-used-by-google-analytics-global-sit
         //gtag('config', '{{ config.GA_TRACKER_ID }}', {
         //    cookie_domain: '{{ config.GA_DOMAIN }}',
@@ -56,7 +50,7 @@
 
     <!--
         FLASH MESSAGING
-        https://flask.palletsprojects.com/en/1.1.x/patterns/flashing/
+        https://fl†ask.palletsprojects.com/en/1.1.x/patterns/flashing/
         https://getbootstrap.com/docs/4.3/components/alerts/
     -->
     {% with messages = get_flashed_messages(with_categories=true) %}
